<resources>
    <string name="app_name">KSPPSSKL</string>
    <string name="designdevelopedby">Designed and Developed By <u>3WD Software</u></string>
    <string name="mobileno">मोबाईल क्र.</string>
    <string name="login">लॉग इन</string>
    <string name="verifyotptext"><![CDATA[ ओ.टी.पी. आपल्या  %1$s या क्रमांकवर पाठविला आहे.कृपया प्रतीक्षा करा.]]></string>
    <string name="changemobile">मोबाईल क्रमांक बदला</string>
    <string name="verifyotphint">ओ.टी.पी. टाका</string>
    <string name="resendcount">वाट पहा</string>
    <string name="verify">पुष्टी करा</string>
    <string name="backclick">Press Back again to Exit.</string>
    <string name="photodeleted">वापरात नसलेले फोटो काढून टाकले.</string>
    <string name="pleasewait">कृपया प्रतिक्षा करा</string>
    <string name="chitboyprefmobile">mobileno</string>
    <string name="chitboypref">chitboy</string>
    <string name="errorpermission">Please Grant All Permission In Order to Continue App</string>
    <string name="internetconnectionerror">इंटरनेट कनेक्शन प्रॉब्लेम</string>
    <string name="internetconnectionunavailable">इंटरनेट कनेक्शन उपलब्ध नाही</string>
    <string name="cancel">रद्द</string>
    <string name="retry">पुन्हा प्रयत्न</string>
    <string name="setting">सेटिंग</string>
    <string name="prefcurrentserver">currentserver</string>
    <string name="errorserver">माहिती पुरवण्यास असमर्थ आहोत, कृपया पुन्हा प्रयत्न करा.</string>
    <string name="errorrelogin">कृपया पुन्हा लॉग इन करा</string>
    <string name="errorreloginimei">कृपया पुन्हा लॉग इन करा.आपण दुसऱ्या मोबाईल वरून लॉग इन झाला होता.</string>
    <string name="errorrelogindeactive">तुम्ही System मधून लॉग ऑउट झाला आहात.</string>
    <string name="errorreloginnotregister">आपण चिटबॉय म्हणून नोंदणी केलेली नाही.</string>
    <string name="errorreloginnotallow">आपण सदर अॅप वापरण्याची परवानगी नाही.</string>
    <string name="errorwrongmobile">आपण चुकीचा मोबाईल नंबर टाकत आहात</string>
    <string name="chitboyprefdeviceuniqueid">deviceuniqueid</string>
    <string name="errorallserverdown">सर्व सर्व्हर बंद आहेत. कृपया कारखान्याशी संपर्क साधा</string>
    <string name="checkingwithanother">पुढील सर्व्हर सोबत तपासात आहोत.</string>
    <string name="chitboyprefuniquestring">uniquestring</string>
    <string name="chitboyprefgroupids">groupids</string>
    <string name="prefyearcode">yearcode</string>
    <string name="prefofficer">officer</string>
    <string name="prefharvestingyearcode">harvesting_year_code</string>
    <string name="chitboyprefpermissiondt">permissionsdetails</string>
    <string name="chitboyprefname">chitboyname</string>
    <string name="chitboyprefdesignation">designation</string>
    <string name="chitboyprefslipboycode">slipboycode</string>
    <string name="chitboyprefmobileno">mobileno</string>
    <string name="invalidresponse">Unparsable Server Response</string>
    <string name="internet">इंटरनेट उपलब्ध आहे</string>
    <string name="nointernet">इंटरनेट उपलब्ध नाही</string>
    <string name="ncinternet">इंटरनेट स्थिती तपासात आहोत.</string>
    <string name="aboutapp">अ‍ॅप बद्दल</string>
    <string name="clearcache">कॅशे हटवा</string>
    <string name="ok">ठीक</string>
    <string name="hoy">होय</string>
    <string name="nai">नाही</string>
    <string name="deletehead">काढून टाका</string>
    <string name="deletemessage">फॉर्म Delete करू का.</string>
    <string name="server1">जिओ सर्व्हर</string>
    <string name="server2">वोडफोन सर्व्हर</string>
    <string name="testserver1">जिओ समस्या सर्व्हर</string>
    <string name="testserver2">वोडफोन समस्या सर्व्हर</string>
    <string name="localserver1">जिओ वाय-फाय सर्व्हर</string>
    <string name="localserver2">वोडफोन वाय-फाय सर्व्हर</string>
    <string name="localtestserver1">जिओ वाय-फाय समस्या सर्व्हर</string>
    <string name="localtestserver2">वोडफोन वाय-फाय समस्या सर्व्हर</string>
    <string name="resend">ओ.टी.पी. पुन्हा पाठवा</string>
    <string name="wrongmobilenoo">चुकीचा क्रमांक</string>
    <string name="chitboyprefchit_boy_id">chit_boy_id</string>
    <string name="actionresendotp">resendotp</string>
    <string name="errorwrongmobileonotp">आपण चुकीचा मोबाईल नंबर टाकत आहात. कृपया \"मोबाईल क्रमांक बदला\" मध्ये जाऊन आपला मोबाईल क्रमांक बदला.</string>
    <string name="actionverifyotp">verifyotp</string>
    <string name="neewenterpin">नवीन पिन टाका</string>
    <string name="enterconfirmpin">नवीन पिन पुन्हा टाका</string>
    <string name="setpin">पिन तयार करा</string>
    <string name="newpin">नवीन पिन</string>
    <string name="chitboyprefloginpin">loginpin</string>
    <string name="errorpinnotmatch">दोन्ही पिन ४ अंकी व सारखेच असावेत.</string>
    <string name="changepin">पिन बदला</string>
    <string name="enteroldpin">जुना पिन टाका</string>
    <string name="erroroldpinnotmatch">आपण जुना पिन चुकीचा टाकत आहात.</string>
    <string name="forgotpin">पिन विसरलात</string>
    <string name="errorwrongotp">कृपया योग्य ओ.टी.पी. टाका</string>
    <string name="enterpin">पिन टाका</string>
    <string name="title_fingerprint">फिंगरप्रिंट साइन इन</string>
    <string name="desc_fingerprint">तुमची ओळख पडताळून पाहण्यासाठी कृपया तुमचे बोट फिंगरप्रिंट स्कॅनरवर ठेवा</string>
    <string name="note">(फिंगरप्रिंट साइन इन तुमचे अॅप लॉगिन अधिक जलद करते. तुमच्या डिव्हाइसवर डिव्हाइस सेटिंग्जमध्ये किमान एक फिंगरप्रिंट नोंदणीकृत असणे आवश्यक आहे)</string>
    <string name="pipe">|</string>
    <string name="errorwrongpin">कृपया योग्य पिन टाका</string>
    <string name="nofigureprintsensor">तुमच्या डिव्हाइसमध्ये फिंगरप्रिंट सेन्सर नाही</string>
    <string name="nofigureprintpermission">फिंगरप्रिंट प्रमाणीकरण परवानगी सक्षम नाही</string>
    <string name="nofigureprintregister">सेटिंग्जमध्ये किमान एक फिंगरप्रिंट नोंदवा</string>
    <string name="nolockenabled">सेटिंग्जमध्ये लॉक स्क्रीन सुरक्षा सक्षम केलेली नाही</string>
    <string name="errormissingparam">Missing Param</string>
    <string name="ignoreupdate">Ignore This Update</string>
    <string name="chitboyprefignoreversion">ignoreversion</string>
    <string name="chitboyprefcompulsoryupdate">complusoryupdate</string>
    <string name="chitboyprefupdatehead">updatehead</string>
    <string name="chitboyprefupdatemsg">updatemsg</string>
    <string name="chitboyprefupdateurl">updateurl</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="refresh">रीफ्रेश</string>
    <string name="backup">Export Database</string>
    <string name="restore">Import Database</string>
    <string name="dbexport">Database Exported</string>
    <string name="dbimport">Database Imported</string>
    <string name="errorpendingform">काही फॉर्म अपूर्ण किंवा कारखान्यास पाठविले नसले कारणाने शेतकरी माहिती व गावांची माहिती लोड होणार नाही.</string>
    <string name="loaddata">माहिती मिळावा</string>
    <string name="masterdata">मास्टर डेटा</string>
    <string name="farmerandvillage">शेतकरी आणि गाव माहिती</string>
    <string name="actionall">all</string>
    <string name="actionmaster">master</string>
    <string name="actionfarmerandvillege">farmerandvillege</string>
    <string name="errorselectloaddata">कोणतीही माहिती निवडलेली नाही.</string>
    <string name="code">कोड</string>
    <string name="name">नाव</string>
    <string name="myfactory">कर्मयोगी सुधाकरपंत परिचारक\nपांडुरंग सह.सा.का.लि.श्रीपूर</string>
    <string name="commingsoonorupdateapp"><![CDATA[%1$s याचे कामकाज चालू आहे किंवा आपले App अद्यावत नाही.]]></string>
    <string name="galithangamhint">गळीत हंगाम निवडा</string>
    <string name="noinformationavailable">माहिती उपलब्ध नाही</string>
    <string name="errorselectseason">कृपया वर्ष निवडा</string>
    <string name="farmercode">शेतकरी कोड</string>
    <string name="farmercodehint">शेतकरी कोड लिहा</string>
    <string name="scanfarmercode">स्कॅन शेतकरी कोड</string>
    <string name="farmername">शेतकरी नाव</string>
    <string name="nondvillage">नोंदणीचे गाव</string>
    <string name="reset">रिसेट</string>
    <string name="submit">सबमिट</string>
    <string name="prefseason">lastseason</string>
    <string name="selectfarmerhint">शेतकरी निवडा</string>
    <string name="informationsaving">माहिती आपल्या मोबाईल मध्ये समाविष्ट केली जात आहे.</string>
    <string name="datanotloaded">आपण डेटा लोड केलेला नाही.</string>
    <string name="notpermission">आपणाला हा शेतकरी लोड करण्याची परवानगी नाही.</string>
    <string name="scanqrcode">कृपया QR कोड चौकानात धारा</string>
    <string name="cancelscan">आपण स्कॅन करणे रद्द केले</string>
    <string name="errornosupportfunctionality">क्षमस्व! आपल्या मोबाईला QR कोड स्कॅन ची कार्यक्षमता समर्थित नाही</string>
    <string name="season">सिझन</string>
    <string name="farmertype">प्रकार</string>
    <string name="colon">:</string>
    <string name="village">गाव</string>
    <string name="selectvillage">गाव निवडा</string>
    <string name="section">गट</string>
    <string name="survyno">गट सर्व्हे नं.</string>
    <string name="entersurvyno">गट सर्व्हे नंबर टाका</string>
    <string name="hangam">हंगाम</string>
    <string name="selecthangam">ऊस हंगाम निवडा</string>
    <string name="plantationdate">लागण दिनांक</string>
    <string name="selectplantationdate">लागण दिनांक निवडा</string>
    <string name="variety">ऊस जात</string>
    <string name="selectvariety">कृपया ऊस जात निवडा</string>
    <string name="irrigation">सिंचन प्रकार</string>
    <string name="selectirrigation">सिंचन प्रकार निवडा</string>
    <string name="area">क्षेत्र (हे.आर)</string>
    <string name="enterarea">क्षेत्र हे. आर. मध्ये लिहा</string>
    <string name="distance">अंतर</string>
    <string name="enterdistance">अंतर लिहा</string>
    <string name="plotphoto">प्लॉट फोटो</string>
    <string name="prev">मागे</string>
    <string name="next">पुढे</string>
    <string name="register">नोंद करा</string>
    <string name="soiltest">माती परिक्षण</string>
    <string name="greenfert">हिरवळीची खते</string>
    <string name="lanetype">सरी पद्धत</string>
    <string name="selectlanetype">सरी पद्धत निवडा</string>
    <string name="select">निवडा</string>
    <string name="benetreat">बेणे प्रक्रिया</string>
    <string name="besaldose">बेसल डोस</string>
    <string name="dripused">ठिबक सिंचन</string>
    <string name="harvesttype">ऊस तोडणी साधन</string>
    <string name="done">पूर्ण करा</string>
    <string name="clear">क्लियर</string>
    <string name="undo">पूर्ववत करा</string>
    <string name="takepoint">मोजणीचे ठिकाण घ्या</string>
    <string name="gpsarea">GPS क्षेत्र</string>
    <string name="hector">हेक्टर</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDz3pDVShELA1Ef61hprTQxlw6GZ2yXUso</string>
    <string name="preflastpicpath">lastpicpath</string>
    <string name="preflastpicname">lastpicname</string>
    <string name="transporter">वाहतूकदार</string>
    <string name="slipno">स्लिप नंबर</string>
    <string name="enterslipno">कृपया स्लिप नंबर टाका.</string>
    <string name="information">माहिती</string>
    <string name="connectprinter">माझे प्रिंटर</string>
    <string name="exportpdf">एक्सपोर्ट पि.डी.एफ</string>
    <string name="pdfsetup">PDF Set Up</string>
    <string name="entercode">कोड टाका</string>
    <string name="gadiwan">गाडीवान</string>
    <string name="token">टोकन नं.</string>
    <string name="troughpass">थ्रू - पास</string>
    <string name="tokenpassreprint">टोकन / थ्रू - पास रिप्रिंट</string>
</resources>