<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuinternet"
        android:icon="@drawable/ic_ncinternet"
        android:orderInCategory="100"
        android:title="@string/ncinternet"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnurefresh"
        android:icon="@drawable/ic_sync"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnupdf"
        android:icon="@drawable/ic_download"
        android:orderInCategory="100"
        android:title="@string/exportpdf"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnupdfsetting"
        android:orderInCategory="100"
        android:title="@string/pdfsetup"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnusettings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnubackup"
        android:orderInCategory="100"
        android:title="@string/backup"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnurestore"
        android:orderInCategory="100"
        android:title="@string/restore"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnuaboutapp"
        android:icon="@drawable/ic_info"
        android:orderInCategory="100"
        android:title="@string/aboutapp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnucache"
        android:orderInCategory="100"
        android:title="@string/clearcache"
        app:showAsAction="never" />
</menu>
