<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_ll"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txthead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information"
            android:textSize="@dimen/textsizehead" />

        <RadioGroup
            android:id="@+id/rgvehicletype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtranporter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/transporter" />

            <RadioButton
                android:id="@+id/rbbulluckcart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/gadiwan" />

        </RadioGroup>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/control_margin"
                android:layout_marginEnd="@dimen/control_margin"
                android:layout_weight="1"
                android:text="@string/code" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:hint="@string/entercode"
                android:inputType="numberDecimal"
                android:maxLength="6" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btncancel"
                style="@style/App_ButtonRedStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnconfirm"
                style="@style/App_ButtonGreenStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="1"
                android:text="@string/submit" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
