<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_ll"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:gravity="center"
            android:text="@string/internetconnectionerror"
            android:textSize="@dimen/textsizehead" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:text="@string/internetconnectionunavailable" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btncancelinternet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="1"
                android:textSize="@dimen/normaltext"
                style="@style/App_ButtonRedStyle"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnretryinternet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="2"
                android:textSize="@dimen/normaltext"
                style="@style/App_ButtonBlueStyle"
                android:text="@string/retry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnsettinginternet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="1"
                android:textSize="@dimen/normaltext"
                style="@style/App_ButtonGreenStyle"
                android:text="@string/setting" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
