<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_ll"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_deletehead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:gravity="center"
            android:text="@string/deletehead"
            android:textSize="@dimen/textsizehead" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:text="@string/deletemessage"
            android:textSize="@dimen/normaltext" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btncanceldelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="1"
                style="@style/App_ButtonRedStyle"
                android:textSize="@dimen/normaltext"
                android:text="@string/nai" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnconfirmdelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                style="@style/App_ButtonGreenStyle"
                android:layout_weight="1"
                android:textSize="@dimen/normaltext"
                android:text="@string/hoy" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
