<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/extramargin"
    tools:context=".SlipNoActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/slipnolbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extramargin"
        android:text="@string/slipno"
        android:textSize="@dimen/textsizehead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtslipno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extramargin"
        android:hint="@string/enterslipno"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slipnolbl" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extramargin"
        android:layout_marginTop="@dimen/extramargin"
        android:layout_marginEnd="@dimen/extramargin"
        android:paddingTop="@dimen/control_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtslipno">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnreset"
            style="@style/App_ButtonRedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/control_margin"
            android:layout_weight="1"
            android:text="@string/reset" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnsubmit"
            style="@style/App_ButtonGreenStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/control_margin"
            android:layout_weight="1"
            android:text="@string/submit" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>